# butterfly-bot

./: .gitignore  COMPETITIVE_FEATURE_MATRIX.md  Cargo.toml  Dioxus.toml  MEMORY_PLAN.md  PLAN.md  README.md  WASM_TOOL_ABI.md  build.rs  config.json  heartbeat.md  prompt.md  skill.md  snapcraft.yaml
.cargo/: config.toml
.github/scripts/: generate_homebrew_formula.py
.github/workflows/: ci.yml  clippy.yml  fmt.yml  homebrew-release.yml  publish.yml  release-deb.yml  release-macos-app.yml
Formula/: butterfly-bot.rb
bak-workflow/: release-deb.yml  release-macos-app.yml
benches/: memory_bench.rs
data/: butterfly-bot.db
docs/: agent-human-inbox-plan.md  agentic-marketplace-crm-plan.md  app-review-2026-02-19.md  blackbox-daily-report-template.md  coverage-100-plan.md  everyone-plan.md  inbox-audit-timeline-checklist.md  memory-profiling.md  product-deep-dive.md  security-audit.md  security-evidence-manifest.md  security-preaudit-checklist.md  solana-x402-economic-actor.md  threat-model.md  tpm-cocoon-security-plan.md  wasm-port-plan.md
examples/01-autonomous-inbox-management/: context.md  heartbeat.md
examples/02-morning-briefings-digests/: context.md  heartbeat.md
examples/03-calendar-scheduling-task-management/: context.md  heartbeat.md
examples/04-personal-family-executive-assistance/: context.md  heartbeat.md
examples/05-research-summarization-monitoring/: context.md  heartbeat.md
migrations/20250129_create_memory/: down.sql  up.sql
migrations/20260130_create_reminders/: down.sql  up.sql
migrations/20260202_create_wakeup/: down.sql  up.sql
migrations/20260221_create_inbox_item_states/: down.sql  up.sql
migrations/20260222_add_todo_dependency_refs/: down.sql  up.sql
migrations/20260222_add_todo_estimates/: down.sql  up.sql
migrations/20260222_create_plan_step_dependencies/: down.sql  up.sql
mutants.out/: lock.json  mutants.json  outcomes.json  unviable.txt
mutants.out.old/: lock.json  outcomes.json  unviable.txt
mutants.out.old/diff/: src__bin__butterfly-bot-ui.rs_line_20_col_5.diff  src__bin__butterfly-botd.rs_line_22_col_5.diff  src__client.rs_line_102_col_9.diff  src__client.rs_line_102_col_9_001.diff  src__client.rs_line_104_col_12.diff  src__client.rs_line_110_col_12.diff  src__client.rs_line_119_col_9.diff  src__client.rs_line_19_col_9.diff  src__client.rs_line_27_col_9.diff  src__client.rs_line_33_col_9.diff  src__client.rs_line_42_col_9.diff  src__client.rs_line_53_col_9.diff  src__client.rs_line_53_col_9_001.diff  src__client.rs_line_53_col_9_002.diff  src__client.rs_line_53_col_9_003.diff  src__client.rs_line_53_col_9_004.diff  src__client.rs_line_53_col_9_005.diff  src__client.rs_line_53_col_9_006.diff  src__client.rs_line_63_col_9.diff  src__client.rs_line_67_col_9.diff  src__client.rs_line_71_col_9.diff  src__client.rs_line_71_col_9_001.diff  src__client.rs_line_71_col_9_002.diff  src__client.rs_line_80_col_9.diff  src__client.rs_line_80_col_9_001.diff  src__client.rs_line_80_col_9_002.diff  src__client.rs_line_86_col_9.diff  src__client.rs_line_90_col_9.diff  src__client.rs_line_97_col_9.diff  src__config.rs_line_124_col_9.diff  src__config.rs_line_130_col_5.diff  src__config.rs_line_134_col_5.diff  src__config.rs_line_143_col_5.diff  src__config.rs_line_156_col_5.diff  src__config.rs_line_184_col_9.diff  src__config.rs_line_215_col_9.diff  src__config.rs_line_242_col_9.diff  src__config.rs_line_246_col_24.diff  src__config.rs_line_261_col_9.diff  src__config.rs_line_36_col_9.diff  (+558 more)
mutants.out/diff/: src__daemon.rs_line_1020_col_29.diff  src__daemon.rs_line_1020_col_29_001.diff  src__daemon.rs_line_1189_col_34.diff  src__daemon.rs_line_1208_col_46.diff  src__daemon.rs_line_120_col_9.diff  src__daemon.rs_line_120_col_9_001.diff  src__daemon.rs_line_1250_col_34.diff  src__daemon.rs_line_1304_col_30.diff  src__daemon.rs_line_1305_col_13.diff  src__daemon.rs_line_1306_col_13.diff  src__daemon.rs_line_1307_col_39.diff  src__daemon.rs_line_134_col_24.diff  src__daemon.rs_line_134_col_24_001.diff  src__daemon.rs_line_134_col_42.diff  src__daemon.rs_line_134_col_42_001.diff  src__daemon.rs_line_1615_col_5.diff  src__daemon.rs_line_1636_col_15.diff  src__daemon.rs_line_1636_col_44.diff  src__daemon.rs_line_1649_col_5.diff  src__daemon.rs_line_1662_col_5.diff  src__daemon.rs_line_1873_col_17.diff  src__daemon.rs_line_1874_col_17.diff  src__daemon.rs_line_1910_col_5_001.diff  src__daemon.rs_line_1910_col_5_002.diff  src__daemon.rs_line_1917_col_5.diff  src__daemon.rs_line_1917_col_5_001.diff  src__daemon.rs_line_1923_col_25.diff  src__daemon.rs_line_1935_col_5.diff  src__daemon.rs_line_1961_col_5.diff  src__daemon.rs_line_1967_col_25.diff  src__daemon.rs_line_196_col_9.diff  src__daemon.rs_line_1985_col_5_002.diff  src__daemon.rs_line_2003_col_5.diff  src__daemon.rs_line_256_col_34.diff  src__daemon.rs_line_300_col_38_001.diff  src__daemon.rs_line_300_col_69.diff  src__daemon.rs_line_300_col_69_001.diff  src__daemon.rs_line_471_col_5.diff  (+90 more)
scripts/: build-deb.sh  build-macos-app.sh  build-windows.sh  build_wasm_tools.sh  generate_icons.py  generate_security_evidence_bundle.sh  profile_ui_memory.sh  run_ui_scope.sh  test-local-snap.sh
secrets/: db_encryption_key
src/: client.rs  config.rs  config_store.rs  daemon.rs  db.rs  error.rs  iced_ui.rs  inbox_fsm.rs  lib.rs  logging.rs  main.rs  runtime_paths.rs  solana_rpc.rs  ui.rs  ui_iced.rs  vault.rs  wasm_bundle.rs
tests/: agent_service.rs  brain_plugins_ported.rs  brain_scheduler.rs  config_factory.rs  coverage.rs  daemon.rs  execution_trace.rs  golden_path.rs  guardrails.rs  memory_provider.rs  memory_summarization.rs  openai_provider.rs  plugins.rs  query_service.rs  security_hardening.rs  sqlite_memory.rs  tools.rs  tools_external.rs  wasm_runtime_invariant.rs
wasm/: butterfly_bot_wasm_tool.wasm  coding_tool.wasm  github_tool.wasm  http_call_tool.wasm  mcp_tool.wasm  planning_tool.wasm  reminders_tool.wasm  search_internet_tool.wasm  solana_tool.wasm  tasks_tool.wasm  todo_tool.wasm  wakeup_tool.wasm  zapier_tool.wasm
wasm-tool/: Cargo.toml
wasm-tool/src/: lib.rs
(+158 files in other folders)
