[package]
name = "butterfly-bot"
version = "0.1.0"
edition = "2021"
license = "MIT"
autobins = false

[lib]
name = "butterfly_bot"
path = "src/lib.rs"

[[bin]]
name = "butterfly-bot"
path = "src/main.rs"

[[bin]]
name = "butterfly-botd"
path = "src/bin/butterfly-botd.rs"

[[bin]]
name = "butterfly-bot-ui"
path = "src/bin/butterfly-bot-ui.rs"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
clap = { version = "4.5.58", features = ["derive", "env"] }
futures = "0.3"
async-openai = { version = "0.32.4", features = ["chat-completion", "audio", "embedding"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "sync", "time", "io-std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
rand = "0.10.0"
regex = "1.12.3"
once_cell = "1.19"
console = "0.16.2"
diesel = { version = "2.2", features = ["sqlite"] }
diesel-async = { version = "0.7.4", features = ["sqlite", "bb8", "tokio"] }
deadpool-sqlite = { version = "0.12", features = ["rt_tokio_1"] }
diesel_migrations = "2.2"
lancedb = "0.26.2"
arrow-array = "57.3.0"
arrow-schema = "57.3.0"
reqwest = { version = "0.13.2", features = ["json", "rustls", "query", "stream"] }
pulldown-cmark = "0.13.0"
syntect = "5.3"
keyring = { version = "3.6", features = ["sync-secret-service"] }
axum = "0.8.8"
bytes = "1.11.1"
sha2 = "0.10"
md-5 = "0.10"
notify-rust = { version = "4.12.0", features = ["d"] }
dioxus = { version = "0.7.3", features = ["desktop"] }
time = { version = "0.3.47", features = ["formatting", "macros"] }
lru = "0.16.3"
rust-mcp-sdk = "0.8.3"
rust-mcp-transport = "0.8.0"
libsqlite3-sys = { version = "0.35", features = ["bundled-sqlcipher"] }
wasmtime = "41.0.3"

[features]
default = []
slow-tests = []

[dev-dependencies]
httpmock = "0.8.3"
tempfile = "3.25.0"
tower = "0.5"
http-body-util = "0.1"
criterion = "0.8.2"
